--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
     "react-scripts": "0.2.3"
   },
   "dependencies": {
+    "eslint": "^3.3.1",
+    "eslint-plugin-flowtype": "^2.11.1",
     "react": "^15.3.1",
     "react-dom": "^15.3.1"
   },
