--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   "dependencies": {
     "eslint": "^3.3.1",
     "eslint-plugin-flowtype": "^2.11.1",
+    "eslint-plugin-jsx-a11y": "^2.1.0",
     "react": "^15.3.1",
     "react-dom": "^15.3.1"
   },
